@@ -39,6 +39,7 @@ model state on disk ({pull}89[#89])
 === Bug Fixes
 
 Age seasonal components in proportion to the fraction of values with which they're updated ({pull}88[#88])
+Persist and restore was missing some of the trend model state ({pull}#99[#99])
 
 === Regressions
 
